2017-03-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData.__neq__):

	Implement not equal comparison operator.

2017-03-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData.__eq__):

	Replace fixed atol value in allclose call.

2017-03-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData.__eq__):

	Implement comparison operator.

2017-03-27  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset.read_period):

	- Move some functionality to _apply_limits_and_filters and
	_add_gran_to_data and _correct_overallocation.

	- In those methods, add support for reading datasets that return
	xarray.Dataset.  Implementation is currently stupid and needs to be
	MUCH faster.

	(MultiFileDataset.get_mandatory_fields):

	- Bugfix, fields in subdir mandatory too

	(HomemadeDataset):

	- This is now a subclass of NetCDFDataset

	* typhon/physics/units/em.py (SRF.estimate_band_coefficients):

	- Fix units for α, β, Δα, and Δβ

	* typhon/physics/units/tools.py UnitsAwareDataArray.__rpow__:

	- Add missing return statement

	* typhon/utils/__init__.py (get_time_coordinates):

	- Return all coordinates on a dataset with a datetime64 dtype

2017-03-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/common.py (center_colorbar):

	Added convenience function to center diverging colorbars around
	zero.

	* doc/typhon.plots.rst: Added `center_colorbar`.

2017-03-24  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/cm/__init__.py:

	Give credit to the cmocean package by Kristen Thyng.

	* doc/conf.py:

	Set font size and bounding box inches for all plots created in
	the documentation.

	* doc/pyplots/plot_phase_sinus.py, doc/typhon.plots.cm.rst:

	Removed the sine example for the phase colormap.

	* doc/pyplots/plot_density.py, doc/pyplots/plot_phase.py,
	doc/pyplots/plot_speed.py, doc/pyplots/plot_temperature.py,